Se termina parcialmente el header y el hero. Queda pendiente corregir el scroll horizontal de toda la pagina que según se analizó, se generó con el header.

--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
 <!-- ////////////// HEADER ////////////////////// -->
-    <header>
-        <div class="row">
-            <div class="col-8">
+    <header id="header">
+        <div class="row ">
+            <div class="col-8 ">
                 <div class="logo">
-                   <img src="img/logo.png" alt="">
+                   <img src="img/logo.png" alt="marca persona Angel Castiblanco" class="logo-img">
                 </div>
             </div>
             <div class="col-4">
-                <div class="menu">
-                    <ul class="navbar-nav .navbar-expand-lg mr-auto">
+                <div class="menu h-100">
+                    <ul class="navbar-nav .navbar-expand-lg mr-auto d-flex align-items-center h-100">
                         <li class="nav-item mr-auto">
-                            <a href="#" class="nav-link">Portafolio</a>
+                            <a href="#" class="nav-link text-white">Portafolio</a>
                         </li>
                         <li class="nav-item mr-auto">
-                            <a href="#" class="nav-link">Portafolio</a>
+                            <a href="#" class="nav-link text-white">Portafolio</a>
                         </li>
                         <li class="nav-item mr-auto">
-                            <a href="#" class="nav-link">Portafolio</a>
+                            <a href="#" class="nav-link text-white">Portafolio</a>
                         </li>
                     </ul>
                 </div>
@@ -33,6 +33,23 @@
         </div>
     </header>
     <!-- //////////////// EMD HEADER ////////////////////-->
+
+    <!-- /////////////// BODY ///////////////////// -->
+    <div id="hero"class="w-100">
+        <div class="row">
+            <div class="col-6 main-text">
+                <h2 class="text-white">Hola! Soy Leonidas Esteban<br>
+                Desarrollador Javascript con <br>
+                pasión por la enseñanza</h2>
+            </div>
+            <div class="col-6 main-banner">
+                <img class="h-100 w-100" src="img/banner.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <!-- //////////// END BODY //////////////////// -->
+
     <!-- //////////////// BOOTSTRAP ///////////////////// -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
