Creo estructura HTML del area de proyectos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,37 @@
             </div>
         </div>
     </div>
-
+    <h2 class="projects-title">PORTAFOLIO (PROYECTOS DESTACADOS)</h2>
+    <div class="projects">
+        <div class="project-container">
+            <div class="project-details">
+                <h3 class="project-title">Platzi Video</h3>
+                <h4 class="project-subtitle">React Native / React</h4>
+                <p class="project-date">Fecha: 01/07/2018</p>
+                <p class="project-url">Puedes verlo en www.platzi.com</p>
+                <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
+            </div>
+            <div class="project-image">
+                <figure>
+                    <img src="img\platzi-video-react-native.png" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="project-container">
+            <div class="project-details">
+                <h3 class="project-title">Platzi Video</h3>
+                <h4 class="project-subtitle">React Native / React</h4>
+                <p class="project-date">Fecha: 01/07/2018</p>
+                <p class="project-url">Puedes verlo en www.platzi.com</p>
+                <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
+            </div>
+            <div class="project-image">
+                <figure>
+                    <img src="img\platzi-video-react-native.png" alt="">
+                </figure>
+            </div>
+        </div>
+    </div>
     <!-- //////////// END BODY //////////////////// -->
 
     <!-- //////////////// BOOTSTRAP ///////////////////// -->
