Se crea la sección de experiencia con toda su estructura HTML y se modifica parte del CSS de la sección mis proyectos

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <!-- //////////////// EMD HEADER ////////////////////-->
 
     <!-- /////////////// BODY ///////////////////// -->
+    <!-- /////////////// HERO ///////////////////// -->
     <div id="hero"class="w-100">
-        <div class="row">
+        <div class="row mr-0">
             <div class="col-6 main-text">
                 <h2 class="text-white">Hola! Soy Leonidas Esteban<br>
                 Desarrollador Javascript con <br>
@@ -47,37 +48,92 @@
             </div>
         </div>
     </div>
+    <!-- /////////////// END HERO ///////////////////// -->
+    <!-- /////////////// PROJECTS ///////////////////// -->
     <h2 class="projects-title">PORTAFOLIO (PROYECTOS DESTACADOS)</h2>
     <div class="projects">
-        <div class="project-container">
-            <div class="project-details">
+        <div class="project-container d-flex border border-secondary rounded">
+            <div class="project-details col-6">
                 <h3 class="project-title">Platzi Video</h3>
                 <h4 class="project-subtitle">React Native / React</h4>
                 <p class="project-date">Fecha: 01/07/2018</p>
                 <p class="project-url">Puedes verlo en www.platzi.com</p>
                 <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
             </div>
-            <div class="project-image">
+            <div class="project-image col-6">
                 <figure>
-                    <img src="img\platzi-video-react-native.png" alt="">
+                    <img class="w-100"src="img\platzi-video-react-native.png" alt="">
                 </figure>
             </div>
         </div>
-        <div class="project-container">
-            <div class="project-details">
+        <div class="project-container d-flex border border border-secondary rounded">
+            <div class="project-details col-6">
                 <h3 class="project-title">Platzi Video</h3>
                 <h4 class="project-subtitle">React Native / React</h4>
                 <p class="project-date">Fecha: 01/07/2018</p>
                 <p class="project-url">Puedes verlo en www.platzi.com</p>
                 <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
             </div>
-            <div class="project-image">
+            <div class="project-image col-6">
                 <figure>
-                    <img src="img\platzi-video-react-native.png" alt="">
+                    <img class="w-100"src="img\platzi-video-react-native.png" alt="">
                 </figure>
             </div>
         </div>
     </div>
+    <!-- /////////////// END PROJECTS ///////////////////// -->
+    <!-- /////////////// EXPERIENCE ///////////////////// -->
+    <div id="experience"class="experience d-flex flex-wrap">
+        <div class="experience-item col-6">
+            <div class="experience-img-container">
+                <figure class="experience-figure w-100">
+                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                </figure>
+            </div>
+            <div class="experience-details">
+                <div class="experience-title">PlatziConf México 2018</div>
+                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                <button class="experience-url btn btn-outline-primary">Ver platica</button>
+            </div>
+        </div>
+        <div class="experience-item col-6">
+            <div class="experience-img-container">
+                <figure class="experience-figure w-100">
+                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                </figure>
+            </div>
+            <div class="experience-details">
+                <div class="experience-title">PlatziConf México 2018</div>
+                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                <button class="experience-url btn btn-outline-primary">Ver platica</button>
+            </div>
+        </div>
+        <div class="experience-item col-6">
+            <div class="experience-img-container">
+                <figure class="experience-figure w-100">
+                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                </figure>
+            </div>
+            <div class="experience-details">
+                <div class="experience-title">PlatziConf México 2018</div>
+                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                <button class="experience-url btn btn-outline-primary">Ver platica</button>
+            </div>
+        </div>
+        <div class="experience-item col-6">
+            <div class="experience-img-container">
+                <figure class="experience-figure w-100">
+                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                </figure>
+            </div>
+            <div class="experience-details">
+                <div class="experience-title">PlatziConf México 2018</div>
+                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                <button class="experience-url btn btn-outline-primary">Ver platica</button>
+            </div>
+        </div>
+    </div>
+    
     <!-- //////////// END BODY //////////////////// -->
 
     <!-- //////////////// BOOTSTRAP ///////////////////// -->
