Creo la sección del footer y le edito parcialmente el css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Angel Castiblanco</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
 <!-- ////////////// HEADER ////////////////////// -->
@@ -133,7 +134,33 @@
             </div>
         </div>
     </div>
-    
+    <!-- /////////////// END EXPERIENCE ///////////////////// -->
+    <!-- /////////////// FOOTER ///////////////////// -->
+    <div id="footer" class="footer">
+        <h3 class="contact-title">¿Creamos algo juntos?</h3>
+        <div class="container d-flex">
+            <div class="contact col-6">
+                <form action="" class="contact-form">
+                    <input class=""type="email" name="" id="">
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
+            <div class="social-media-icons col-6">
+                <a href="facebook.com">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+        </div>
+    </div>
     <!-- //////////// END BODY //////////////////// -->
 
     <!-- //////////////// BOOTSTRAP ///////////////////// -->
