--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <title>Portafolio Angel Castiblanco</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
 </head>
 <body>
 <!-- ////////////// HEADER ////////////////////// -->
-    <header id="header">
-        <div class="row ">
-            <div class="col-8 ">
+    <header id="header" class="">
+        <div class="container d-flex">
+            <div class="col-6">
                 <div class="logo">
                    <img src="img/logo.png" alt="marca persona Angel Castiblanco" class="logo-img">
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-6">
                 <div class="menu h-100">
                     <ul class="navbar-nav .navbar-expand-lg mr-auto d-flex align-items-center h-100">
                         <li class="nav-item mr-auto">
@@ -38,8 +39,8 @@
     <!-- /////////////// BODY ///////////////////// -->
     <!-- /////////////// HERO ///////////////////// -->
     <div id="hero"class="w-100">
-        <div class="row mr-0">
-            <div class="col-6 main-text">
+        <div class="container d-flex">
+            <div class="col-6 main-text d-flex align-items-center">
                 <h2 class="text-white">Hola! Soy Leonidas Esteban<br>
                 Desarrollador Javascript con <br>
                 pasión por la enseñanza</h2>
@@ -51,113 +52,120 @@
     </div>
     <!-- /////////////// END HERO ///////////////////// -->
     <!-- /////////////// PROJECTS ///////////////////// -->
-    <h2 class="projects-title">PORTAFOLIO (PROYECTOS DESTACADOS)</h2>
-    <div class="projects">
-        <div class="project-container d-flex border border-secondary rounded">
-            <div class="project-details col-6">
-                <h3 class="project-title">Platzi Video</h3>
-                <h4 class="project-subtitle">React Native / React</h4>
-                <p class="project-date">Fecha: 01/07/2018</p>
-                <p class="project-url">Puedes verlo en www.platzi.com</p>
-                <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
+    <div class="projects bg-light pt-5 pb-5">
+        <div class="container">
+            <h4 class="projects-title text-primary mb-5 font-weight-bold">PORTAFOLIO (PROYECTOS DESTACADOS)</h4>
+            <div class="project-container d-flex border border-secondary rounded bg-white align-items-center mt-3">
+                <div class="project-details col-6">
+                    <h3 class="project-title mb-0 font-weight-bold">Platzi Video</h3>
+                    <p class="project-subtitle mt-2 mb-2"><small>React Native / React</small></p>
+                    <p class="project-date mt-2 mb-2"><small><b>Fecha:</b> 01/07/2018</small></p>
+                    <p class="project-url mt-2 mb-2"><small><b>Puedes verlo en:</b> www.platzi.com</small></p>
+                    <p class="project-description mt-2 mb-2">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
+                </div>
+                <div class="project-image col-6">
+                    <figure>
+                        <img class="w-100"src="img\platzi-video-react-native.png" alt="">
+                    </figure>
+                </div>
             </div>
-            <div class="project-image col-6">
-                <figure>
-                    <img class="w-100"src="img\platzi-video-react-native.png" alt="">
-                </figure>
-            </div>
-        </div>
-        <div class="project-container d-flex border border border-secondary rounded">
-            <div class="project-details col-6">
-                <h3 class="project-title">Platzi Video</h3>
-                <h4 class="project-subtitle">React Native / React</h4>
-                <p class="project-date">Fecha: 01/07/2018</p>
-                <p class="project-url">Puedes verlo en www.platzi.com</p>
-                <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
-            </div>
-            <div class="project-image col-6">
-                <figure>
-                    <img class="w-100"src="img\platzi-video-react-native.png" alt="">
-                </figure>
+            <div class="project-container d-flex border border-secondary rounded bg-white align-items-center mt-3">
+                <div class="project-details col-6">
+                    <h3 class="project-title mb-0 font-weight-bold">Platzi Video</h3>
+                    <p class="project-subtitle mt-2 mb-2"><small>React Native / React</small></p>
+                    <p class="project-date mt-2 mb-2"><small><b>Fecha:</b> 01/07/2018</small></p>
+                    <p class="project-url mt-2 mb-2"><small><b>Puedes verlo en:</b> www.platzi.com</small></p>
+                    <p class="project-description mt-2 mb-2">Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
+                </div>
+                <div class="project-image col-6">
+                    <figure>
+                        <img class="w-100"src="img\platzi-video-react-native.png" alt="">
+                    </figure>
+                </div>
             </div>
         </div>
     </div>
     <!-- /////////////// END PROJECTS ///////////////////// -->
     <!-- /////////////// EXPERIENCE ///////////////////// -->
-    <div id="experience"class="experience d-flex flex-wrap">
-        <div class="experience-item col-6">
-            <div class="experience-img-container">
-                <figure class="experience-figure w-100">
-                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
-                </figure>
+    <div id="experience"class="experience bg-light">
+        <h4 class="experiences-title text-primary container font-weight-bold mb-5">MÁS SOBRE MI EXPERIENCIA</h4>
+        <div class="container d-flex flex-wrap justify-content-around">
+            <div class="experience-item col-5 h-100 mb-4 overflow-hidden">
+                <div class="experience-img-container">
+                    <figure class="experience-figure w-100">
+                        <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="experience-details bg-white mr-4 ml-4 mb-3 border border-white p-3">
+                    <h3 class="experience-title">PlatziConf México 2018</h3>
+                    <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                    <button class="experience-url btn btn-outline-primary">Ver platica</button>
+                </div>
             </div>
-            <div class="experience-details">
-                <div class="experience-title">PlatziConf México 2018</div>
-                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
-                <button class="experience-url btn btn-outline-primary">Ver platica</button>
+            <div class="experience-item col-5 h-100 mb-4 overflow-hidden">
+                <div class="experience-img-container">
+                    <figure class="experience-figure w-100">
+                        <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="experience-details bg-white mr-4 ml-4 mb-3 border border-white p-3">
+                    <h3 class="experience-title">PlatziConf México 2018</h3>
+                    <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                    <button class="experience-url btn btn-outline-primary">Ver platica</button>
+                </div>
             </div>
-        </div>
-        <div class="experience-item col-6">
-            <div class="experience-img-container">
-                <figure class="experience-figure w-100">
-                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
-                </figure>
+            <div class="experience-item col-5 h-100 mb-4 overflow-hidden">
+                <div class="experience-img-container">
+                    <figure class="experience-figure w-100">
+                        <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="experience-details bg-white mr-4 ml-4 mb-3 border border-white p-3">
+                    <h3 class="experience-title">PlatziConf México 2018</h3>
+                    <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                    <button class="experience-url btn btn-outline-primary">Ver platica</button>
+                </div>
             </div>
-            <div class="experience-details">
-                <div class="experience-title">PlatziConf México 2018</div>
-                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
-                <button class="experience-url btn btn-outline-primary">Ver platica</button>
-            </div>
-        </div>
-        <div class="experience-item col-6">
-            <div class="experience-img-container">
-                <figure class="experience-figure w-100">
-                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
-                </figure>
-            </div>
-            <div class="experience-details">
-                <div class="experience-title">PlatziConf México 2018</div>
-                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
-                <button class="experience-url btn btn-outline-primary">Ver platica</button>
-            </div>
-        </div>
-        <div class="experience-item col-6">
-            <div class="experience-img-container">
-                <figure class="experience-figure w-100">
-                    <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
-                </figure>
-            </div>
-            <div class="experience-details">
-                <div class="experience-title">PlatziConf México 2018</div>
-                <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
-                <button class="experience-url btn btn-outline-primary">Ver platica</button>
+            <div class="experience-item col-5 h-100 mb-4 overflow-hidden">
+                <div class="experience-img-container">
+                    <figure class="experience-figure w-100">
+                        <img class="experience-img w-100" src="img/platzi-conf.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="experience-details bg-white mr-4 ml-4 mb-3 border border-white p-3">
+                    <h3 class="experience-title">PlatziConf México 2018</h3>
+                    <div class="experience-description">El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</div>
+                    <button class="experience-url btn btn-outline-primary">Ver platica</button>
+                </div>
             </div>
         </div>
     </div>
     <!-- /////////////// END EXPERIENCE ///////////////////// -->
     <!-- /////////////// FOOTER ///////////////////// -->
     <div id="footer" class="footer">
-        <h3 class="contact-title">¿Creamos algo juntos?</h3>
-        <div class="container d-flex">
-            <div class="contact col-6">
-                <form action="" class="contact-form">
-                    <input class=""type="email" name="" id="">
-                    <button type="submit">Enviar</button>
-                </form>
-            </div>
-            <div class="social-media-icons col-6">
-                <a href="facebook.com">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a href="">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="">
-                    <i class="fab fa-instagram"></i>
-                </a>
+        <div class="container">
+            <h3 class="contact-title">¿Creamos algo juntos?</h3>
+            <div class="d-flex">
+                <div class="contact col-6">
+                    <form action="" class="contact-form">
+                        <input class=""type="email" name="" id="">
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+                <div class="social-media-icons col-6">
+                    <a href="facebook.com">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
