Se termina parcialmente toda la pagina con sus ediciones en css, quedan por corregir detalles

--- a/index.html
+++ b/index.html
@@ -142,30 +142,40 @@
     </div>
     <!-- /////////////// END EXPERIENCE ///////////////////// -->
     <!-- /////////////// FOOTER ///////////////////// -->
-    <div id="footer" class="footer">
+    <div id="footer" class="footer bg-primary text-white pt-2 pb-2">
         <div class="container">
-            <h3 class="contact-title">¿Creamos algo juntos?</h3>
+            <h3 class="contact-title"><small>¿Creamos algo juntos?</small></h3>
             <div class="d-flex">
                 <div class="contact col-6">
                     <form action="" class="contact-form">
-                        <input class=""type="email" name="" id="">
+                        <input class=""type="email" name="" id="" placeholder="Dejame tu Email"> <br>
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
-                <div class="social-media-icons col-6">
+                <div class="social-media-icons col-6 text-right">
                     <a href="facebook.com">
-                        <i class="fab fa-facebook"></i>
+                        <i class="fab mr-3 text-white fa-facebook"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab mr-3 text-white fa-twitter"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-github"></i>
+                        <i class="fab mr-3 text-white fa-github"></i>
                     </a>
                     <a href="">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab mr-3 text-white fa-instagram"></i>
                     </a>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright bg-dark text-white pt-3 pb-3">
+        <div class="container d-flex">
+            <div class="copyright col-6">
+                <p class="mb-0">Portafolio Angel Castiblanco 2020 <i class="far fa-copyright"></i></p>
+            </div>
+            <div class="credits col-6 text-right">
+                <p class="mb-0">Diseñado con <i class="fas fa-heart d-inline"></i> por Angel Castiblanco</p>
             </div>
         </div>
     </div>
