Detalles de diseño y mejora de fondo del logo

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 </head>
 <body>
 <!-- ////////////// HEADER ////////////////////// -->
-    <header id="header" class="">
+    <header id="header" class="position-relative shadow p-3">
         <div class="container d-flex">
-            <div class="col-6">
+            <div class="col-7">
                 <div class="logo">
                    <img src="img/logo.png" alt="marca persona Angel Castiblanco" class="logo-img">
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-5">
                 <div class="menu h-100">
-                    <ul class="navbar-nav .navbar-expand-lg mr-auto d-flex align-items-center h-100">
+                    <ul class="navbar-nav navbar-expand-lg text-white mr-auto d-flex align-items-center h-100 justify-content-between">
                         <li class="nav-item mr-auto">
-                            <a href="#" class="nav-link text-white">Portafolio</a>
+                            <a href="#projects" class="nav-link p-2 btn btn-outline-light">Portafolio</a>
                         </li>
                         <li class="nav-item mr-auto">
-                            <a href="#" class="nav-link text-white">Portafolio</a>
+                            <a href="#experience" class="nav-link p-2 btn btn-outline-light">Experiencia</a>
                         </li>
                         <li class="nav-item mr-auto">
-                            <a href="#" class="nav-link text-white">Portafolio</a>
+                            <a href="#footer" class="nav-link p-2 btn btn-outline-light">Trabajemos Juntos</a>
                         </li>
                     </ul>
                 </div>
@@ -41,9 +41,9 @@
     <div id="hero"class="w-100">
         <div class="container d-flex">
             <div class="col-6 main-text d-flex align-items-center">
-                <h2 class="text-white">Hola! Soy Leonidas Esteban<br>
+                <h1 class="text-white">Hola! Soy Leonidas Esteban<br>
                 Desarrollador Javascript con <br>
-                pasión por la enseñanza</h2>
+                pasión por la enseñanza</h1>
             </div>
             <div class="col-6 main-banner">
                 <img class="h-100 w-100" src="img/banner.png" alt="">
@@ -52,7 +52,7 @@
     </div>
     <!-- /////////////// END HERO ///////////////////// -->
     <!-- /////////////// PROJECTS ///////////////////// -->
-    <div class="projects bg-light pt-5 pb-5">
+    <div id="projects" class="projects bg-light pt-5 pb-5">
         <div class="container">
             <h4 class="projects-title text-primary mb-5 font-weight-bold">PORTAFOLIO (PROYECTOS DESTACADOS)</h4>
             <div class="project-container d-flex border border-secondary rounded bg-white align-items-center mt-3">
